// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Budget
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
  <div
    className="list-nav"
  />
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Budget
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      expense={
        Object {
          "amount": 195,
          "budgetId": "asf0923",
          "createdAt": 0,
          "description": "Gum",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 10095,
          "budgetId": "a;sdlfj2089",
          "createdAt": -345600000,
          "description": "Rent",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 4500,
          "budgetId": "tuq3948tu",
          "createdAt": 345600000,
          "description": "Credit Card",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
  <div
    className="list-nav"
  />
</div>
`;

exports[`should render ExpenseList with partitioned expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Budget
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      expense={
        Object {
          "amount": 195,
          "budgetId": "asf0923",
          "createdAt": 0,
          "description": "Gum",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 10095,
          "budgetId": "a;sdlfj2089",
          "createdAt": -345600000,
          "description": "Rent",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 4500,
          "budgetId": "tuq3948tu",
          "createdAt": 345600000,
          "description": "Credit Card",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
  <div
    className="list-nav"
  >
    <button
      className="button button--nav"
      onClick={[Function]}
    >
      Next
    </button>
    <button
      className="button button--nav"
      onClick={[Function]}
    >
      Previous
    </button>
  </div>
</div>
`;
